Font edit and webpage title

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 
     
 }
-.amr,.gc{
+.amr,.gc,.fc,.hg,.ms{
     font-family: "Gwendolyn", cursive;
     font-weight: 700;
     font-style: normal;
